crates/keron-lang/tests/corpus/errors/check/nullable_used_as_t.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch: expected `String`, found `String?`
  --> 2:20
  |
2 | val name: String = maybe_name
  |                    ^^^^^^^^^^
